packages/svelte/tests/compiler-errors/samples/unbalanced-curly-component/main.svelte
<script>
	import Component from "./Component.svelte";
</script>

<Component onclick={true}} />